versioned_docs/version-0.10/cloud/registry.mdx
---
title: Okteto Registry
description: The Okteto Registry allows every Okteto namespace to have its own space to store its container images
sidebar_label: Container Registry
id: registry
---

The Okteto Registry allows every Okteto namespace to have its own space to store its container images.

## Authentication

You can use [Okteto CLI](/docs/0.10/cloud/okteto-cli/) to build and push images to the Okteto Registry.

Run [`okteto context`](/docs/0.10/reference/cli/#context) to configure Okteto CLI to be able to push images. This command will download the required tokens and certificates required to push and pull images to the Okteto Registry.

## Push images into the Okteto Registry

The Okteto CLI is automatically configured to interact with the Okteto Registry. Just make sure that you're using the registry URL with your Okteto namespace.

```console
okteto build -t okteto.dev/hello-world:golang .
```

When using the Okteto CLI, you can use the notation `okteto.dev` to refer to images in your [Namespace](https://www.okteto.com/docs/cloud/namespaces/). `okteto.dev` gets expanded to `registry.cloud.okteto.net/<okteto-namespace>`. For example, `okteto.dev/hello-world:golang` expands to `registry.cloud.okteto.net/cindy/hello-world:golang` for the namespace `cindy` and expands to `registry.cloud.okteto.net/tom/hello-world:golang` for the namespace `tom`. You can configure your current namespace using [Okteto CLI](/docs/0.10/cloud/okteto-cli/)'s [`okteto namespace`](/docs/0.10/reference/cli/#namespace) command.

You can also use `okteto.dev` in your Dockerfiles when building using the [Okteto CLI](/docs/0.10/cloud/okteto-cli/). 

```
# Dockerfile 
FROM okteto.dev/hello-world:golang
WORKDIR /app
COPY main.go ./
RUN go build -o /usr/local/bin/hello-world
EXPOSE 8080
CMD ["/usr/local/bin/hello-world"]
```

However, please note that this would not work if you try to build using `docker build` instead. In that case, you'll need to use the full expanded URL for your images.

When using the expanded URL for the Okteto Registry, please make sure that your image names follow the following scheme, where `<okteto-namespace>` is a valid Okteto [Namespace](/docs/0.10/cloud/namespaces/).

```
registry.cloud.okteto.net/<okteto-namespace>/<image>:<tag>
```

## Use images from the Okteto Registry

Any image pushed into the Okteto Registry is private. You'll need to authenticate with the registry before pulling an image.

Namespaces in Okteto Cloud are automatically allowed to pull images that belong to their namespace automatically. If your application uses images from the Okteto Registry, it'll be able to pull container images without any extra configuration.

To pull an image from a different namespace, you'll need to create and configure the required `imagePullSecrets` as outlined [here](/docs/0.10/reference/faqs/#how-to-use-private-images).
